[project]
name = "dbchat"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "dbchat", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
