[project]
name = "dbchat"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "langchain-anthropic (>=0.3.15,<0.4.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "fastapi (==0.115.9)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)"
]

[tool.poetry]
packages = [{include = "dbchat", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
